<resources>
    <string name="app_name">What\'s in your fridge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_item">Add Item</string>
    <string name="view_items">View Items</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="select_image">Select an Image</string>
    <string name="item_name">Item Name</string>
    <string name="item_image_description">Select an Image from Gallery or Camera</string>
    <string name="fab_description">Add New Item</string>
    <string name="select_category">Select Category</string>
    <string name="category_name">Category\n</string>
    <string name="add_category">Add Category</string>
</resources>