<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="107dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507">

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50px"
            android:ems="10"
            android:hint="@string/item_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/itemDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50px"
            android:ems="10"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/expiry_date"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:text="@string/select_image"
            android:textAlignment="center"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/item_image_description"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="49dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/add_item" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>